# raytracingdemo

./: .gitignore  CMakeLists.txt  README.md  aabb.hpp  analyze_performance.py  bvh.hpp  bvh_analysis.py  bvh_performance_analysis.py  camera.h  camera.hpp  color.h  color.hpp  data_to_latex.py  graphs.py  hit_ray_analysis.py  hit_ray_analysis_both_variants.py  main.cpp  object_loader.hpp  patch_data.py  ray.h  ray.hpp  run_analysis.sh  sphere.h  sphere.hpp  triangle.hpp  validate_data.py  vector3.h  vector3.hpp
example/: object_meta.csv
lib/: OBJ_Loader.h
scripts/: bvh_analysis.py  data_to_latex.py  graphs.py  hit_ray_analysis.py  requirements.txt
src/: aabb.hpp  bvh.hpp  camera.hpp  camera_path.hpp  color.hpp  main.cpp  object_loader.hpp  stack_bvh.hpp
src/primitives/: primitive.hpp  ray.hpp  sphere.hpp  triangle.hpp  vector3.hpp
src/utils/: benchmark.hpp  object_loader.hpp  timer.hpp
testruns_2025_11_15/testrun_0/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_1/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_10/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_11/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_12/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_13/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_14/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_2/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_3/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_4/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_5/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_6/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_7/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_8/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_11_15/testrun_9/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_0/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_1/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_10/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_11/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_12/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_13/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_14/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_15/: bvh_build_times.csv  render_times.csv  shading_times.csv
testruns_2025_12_25/testrun_16/: bvh_build_times.csv  render_times.csv  shading_times.csv
thesis/: literatur.bib  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.tex  main.toc  template-config.tex  template-makros.tex
visual-help/: all_tables_consolidated.tex  comparison_statistical_results_table.tex  dynamic_statistical_results_table.tex  static_statistical_results_table.tex
(+6252 files in other folders)
